[package]
name = "rinhavm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rinhavm"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
hvm-lang = { git = "https://github.com/HigherOrderCO/hvm-lang.git" }
hvm-core = { git = "https://github.com/HigherOrderCO/hvm-core.git" }
